syntax = "proto3";
package mmn;

option go_package = "github.com/mezonai/mmn/proto;proto";

// Transaction status enum
enum TransactionStatus {
  PENDING = 0;      // Transaction is in mempool
  CONFIRMED = 1;    // Transaction is included in a block
  FINALIZED = 2;    // Transaction is finalized (block has enough votes)
  FAILED = 3;       // Transaction failed validation
}

// Transaction data structure for transactions
message TransactionData {
  string tx_hash = 1;
  string sender = 2; // sender address
  string recipient = 3; // recipient address
  string amount = 4; // amount
  uint64 nonce = 5; // nonce
  uint64 timestamp = 6;
  TransactionStatus status = 7;
  string text_data = 8;
  string extra_info = 9;
  int32 transaction_type = 10;
}

message TxMsg { 
  int32 type = 1;
  string sender = 2;
  string recipient = 3;
  string amount = 4;
  uint64 timestamp = 5;
  string text_data = 6;
  uint64 nonce = 7;
  string extra_info = 8;
  string zk_proof = 9;
  string zk_pub = 10;
}

message SignedTxMsg {
  TxMsg tx_msg = 1;
  string signature = 2;
}

message AddTxResponse {
  bool   ok      = 1;
  string tx_hash = 2;
  string error   = 3;
}

message GetTxByHashRequest {
  string tx_hash = 1;
}

message TxInfo {
  string sender = 1;
  string recipient = 2;
  string amount = 3;
  uint64 timestamp = 4;
  string text_data = 5;
  uint64 nonce = 6;
  uint64 slot = 7;
  string blockhash = 8;
  TransactionStatus status = 9;
  string err_msg = 10;
  string extra_info = 11;
  string tx_hash = 12;
}

message GetTxByHashResponse {
  string error = 1;
  TxInfo tx = 2;
  uint32 decimals = 3; // Number of fractional digits for amount formatting
}

message TransactionStatusInfo {
  string tx_hash = 1;
  TransactionStatus status = 2;
  uint64 block_slot = 3;        // Slot where transaction was included (if confirmed/finalized)
  string block_hash = 4;        // Hash of the block (if confirmed/finalized)
  uint64 confirmations = 5;     // Number of confirmations
  string error_message = 6;     // Error message if failed
  uint64 timestamp = 7;         // Timestamp when status was last updated
  string extra_info = 8;        // Extra info that was attached to transaction on creation
  string amount = 9;            // Transaction amount
  string text_data = 10;        // Transaction text data
}

message SubscribeTransactionStatusRequest {}

message GetPendingTransactionsRequest {}

message GetPendingTransactionsResponse {
  uint64 total_count = 1;                
  repeated TransactionData pending_txs = 2; 
  string error = 3;      
}

service TxService {
  rpc AddTx(SignedTxMsg) returns (AddTxResponse);
  rpc GetTxByHash(GetTxByHashRequest) returns (GetTxByHashResponse);  
  rpc SubscribeTransactionStatus(SubscribeTransactionStatusRequest) returns (stream TransactionStatusInfo);
  rpc GetPendingTransactions(GetPendingTransactionsRequest) returns (GetPendingTransactionsResponse);
}
